# raft-lean-squad

./: Cargo.toml  Charon.toml  memory.json  memory.md  notes.md  state.json
.github/aw/: actions-lock.json
.github/workflows/: aeneas-generate.yml  ci.yml  lean-ci.yml  lean-squad.lock.yml  lean-squad.md  repo-assist.lock.yml  repo-assist.md
formal-verification/: CORRESPONDENCE.md  CRITIQUE.md  REPORT.md  RESEARCH.md  TARGETS.md
formal-verification/lean/: FVSquad.lean  README.md  lakefile.toml
formal-verification/lean/FVSquad/: AEBroadcastInvariant.lean  BcastAppend.lean  BroadcastLifecycle.lean  CommitCurrentTerm.lean  CommitRule.lean  CommittedIndex.lean  CommittedIndexCorrespondence.lean  ConcreteProtocolStep.lean  ConcreteTransitions.lean  ConfChangeRestore.lean  ConfChanger.lean  ConfigValidate.lean  ConfigurationInvariants.lean  ConfigurationInvariantsCorrespondence.lean  CrossModuleComposition.lean  (+78 more)
formal-verification/paper/: paper.bib  paper.tex
formal-verification/specs/: committed_index_informal.md  confchange_changer_informal.md  confchange_restore_informal.md  find_conflict_by_term_informal.md  find_conflict_informal.md  get_priority_informal.md  handle_append_entries_informal.md  handle_heartbeat_response_informal.md  handle_snapshot_status_informal.md  has_next_entries_informal.md  has_quorum_informal.md  has_ready_informal.md  inflights_informal.md  is_continuous_ents_informal.md  is_up_to_date_informal.md  joint_quorum_informal.md  leadercompleteness_informal.md  limit_size_informal.md  log_ordering_informal.md  log_unstable_informal.md  majority_quorum_informal.md  maybe_append_informal.md  maybe_commit_by_vote_informal.md  maybe_commit_informal.md  maybe_persist_informal.md  mem_storage_informal.md  msg_type_informal.md  next_entries_informal.md  progress_informal.md  progress_set_informal.md  progress_tracking_informal.md  quorum_recently_active_informal.md  raftlog_append_informal.md  raftlog_restore_informal.md  raftlog_slice_informal.md  raftlog_term_informal.md  read_only_informal.md  restore_informal.md  restore_node_informal.md  state_transitions_informal.md  (+6 more)
src/: errors.rs  lib.rs  log_unstable.rs  raft.rs  raft_log.rs  raw_node.rs  read_only.rs  storage.rs  tracker.rs  util.rs
src/quorum/: joint.rs  majority.rs
(+27 files in other folders)
