[package]
name = "raft"
version = "0.7.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/tikv/raft-rs"
readme = "README.md"
homepage = "https://github.com/tikv/raft-rs"
documentation = "https://docs.rs/raft"
description = "The rust language implementation of Raft algorithm."
categories = ["algorithms", "database-implementations"]
edition = "2021"

[workspace]
members = ["proto", "harness", "datadriven"]

[features]
default = ["protobuf-codec", "default-logger", "thiserror"]
# Enable failpoints
failpoints = ["fail/failpoints"]
protobuf-codec = ["raft-proto/protobuf-codec", "bytes"]
prost-codec = ["raft-proto/prost-codec"]
default-logger = ["slog", "slog-stdlog", "slog-envlogger", "slog-term"]
# Replace unsafe stack-array optimisations with safe equivalents so that
# Aeneas (the Rust→Lean translation tool) can process the codebase.
# This feature has no effect on semantics; it only trades a minor stack-
# allocation optimisation for guaranteed safe Rust.  Do not enable in
# production builds unless you specifically need Aeneas compatibility.
aeneas = []

# Make sure to synchronize updates with Harness.
[dependencies]
bytes = {  version = "1.11", optional = true }
fxhash = "0.2.1"
fail = { version = "0.4", optional = true }
getset = "0.1.1"
thiserror = { version = "1.0", optional = true }
raft-proto = { path = "proto", version = "0.7.0", default-features = false }
rand = "0.8"
slog = { version = "2.2", optional = true }
slog-envlogger = { version = "2.1.0", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2.4.0", optional = true }

[dev-dependencies]
criterion = "0.3"
regex = "1"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-stdlog = "4"
slog-term = "2.4.0"
anyhow = "1.0.40"
datadriven = { path = "datadriven", version = "0.1.0" }
itertools = "0.10.0"

[[bench]]
name = "benches"
harness = false

[badges]
travis-ci = { repository = "tikv/raft-rs" }

[[example]]
name = "single_mem_node"
path = "examples/single_mem_node/main.rs"

[[example]]
name = "five_mem_node"
path = "examples/five_mem_node/main.rs"
